--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ header.shadow {
 .about-text p {
   font-size: var(--p-font);
   font-weight: 400;
-  text-align: justify;
+  text-align: start;
 }
 .information {
   margin: 1rem 0 1.4rem;
